# machine-vision-assignment-1

./: README.md  pyproject.toml
answers/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py
code-segments/: 02. open-image.py  1. create-image-1.py
results/04/: optimal_threshold.txt
results/05/: kernel_calculations.txt
results/06/: kernel_calculations.txt
results/07/: im01.txt  im02.txt  im03.txt  taylor_small.txt  taylor_very_small.txt
