[project]
name = "machine-vision-assignment-1"
version = "0.1.0"
description = "Assignment for machine vision module in L4"
authors = [
    {name = "Ravindu Weerasinghe",email = "ravindutharuka2001@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15, >=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
